	*						 *
	*	       2.8 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.8.1 patched


BUG FIXES

    o	getwd() could segfault (PR#13424).

    o	dir() does a better job when dir is of rhe form "d:", the
	currrent directory is not the root on that drive, and either
	'full' or 'recursive' is true.



		CHANGES IN R VERSION 2.8.1


NEW FEATURES

    o	R_HOME/bin/helpPRINT.bat now contains an example of use with
	MiKTeX to produce a PDF version of the help file.

    o	Rcmd INSTALL has a new option --pkglock to allow a per-package
	lock directory (useful for parallel installs).


BUG FIXES

    o	The windows() device now works around the total clipping of
 	semi-transparent rectangles and circles that extend outside
 	the device region.
 	
    o	The script editor did not respect user preferences for the
	background colour.
	
    o	normalizePath() no longer returns a garbage string when the
    	input is bad; it now signals an error. (PR#13199)
    	
    o	File share/sh/dcf.sh was not distributed with the binary
    	build. (PR#13200)

    o	dir.create() did not print the path correctly in warning messages.

    o	The C-level function consolecmd had been broken in non-Latin-1
	single-byte locales in R 2.8.0 by changes intended to support
	the Japanese IME.  This affected some menu items in Rgui
	(e.g. to source R files with non-Latin-1 names) and submitting
	commands from the script editor, but only in rarer encodings
	such as Central European, Greek and Cyrillic.  (PR#13195,
	probably also PR#13120)

    o	The attempt to make the 'Load' button in the GUI preferences
	start in the home directory failed if the latter was specified
	with forward slashes, and reset the current search directory
	for other file open dialogs (e.g. for opening a script).

    o	The installer would sometimes write the current version
	information to the registry even if that option was not
	checked.
